# InkGraph

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  setup.ps1  vite.config.ts
.claude/agents/: spec-sync.md
.github/workflows/: ci.yml
docs/: spec.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_add_mode.sql  004_add_special_count.sql  005_add_gold_award.sql  006_add_paint_count.sql  007_fix_result_constraint.sql  008_add_auto_recorded.sql
src-tauri/src/: capture.rs  capture_loop.rs  cascade.rs  commands.rs  db.rs  detector.rs  extractor.rs  lib.rs  ocr.rs  preprocess.rs  screen_state.rs  state.rs  types.rs
src/assets/: weapons.ts
src/components/: AnalysisPanel.tsx  Header.tsx  ManualEntryModal.tsx  MatchCard.tsx  MatchHistoryPage.tsx  MatchList.tsx  OcrDebugPanel.tsx  SessionStats.tsx  TagInput.tsx  WeaponPicker.tsx  XpChart.tsx
src/hooks/: useMatches.ts
src/lib/: db.ts
src/types/: index.ts
tools/CropMyResult/: crop_my_row.py  crop_stagerulemode_area.py
tools/ExtractImageFromMp4/: extract_frames.py
