[package]
name = "inkgraph"
version = "0.1.0"
description = "InkGraph - Splatoon 3 Xmatch tracker with WinRT OCR"
authors = ["qnaiv"]
license = "MIT"
repository = "https://github.com/qnaiv/InkGraph"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
# Tauri core
tauri            = { version = "2.11.2" }
tauri-plugin-log    = "2"
tauri-plugin-sql    = { version = "2", features = ["sqlite"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"

# Serde / JSON
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
uuid      = { version = "1", features = ["v4"] }
chrono    = { version = "0.4", features = ["serde"] }
log       = "0.4"
once_cell = "1"
thiserror = "1"
anyhow    = "1"

# YOLO/ONNX 推論 (ort 2.x + load-dynamic: onnxruntime.dll を実行時ロード)
# download-binaries に切り替えるとビルド時に自動ダウンロード
ort     = { version = "2", features = ["load-dynamic"] }
ndarray = "0.16"

# 画像処理 (前処理・リサイズ・二値化)
image     = "0.25"
imageproc = "0.25"

# Windows-specific dependencies (WinRT OCR / Graphics Capture)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    # OCR
    "Media_Ocr",
    "Globalization",

    # Graphics Capture (WGC)
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",

    # SoftwareBitmap / Imaging
    "Graphics_Imaging",

    # Storage / Streams
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",

    # Win32 for HWND enumeration
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",

    # WinRT interop
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",

    # Direct3D / DXGI (capture + device)
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
